addition to readme

--- a/README
+++ b/README
@@ -14,3 +14,6 @@ Don't get too committed (haha, git pun) to my specific code. Hold onto the
 high level ideas and dont be afraid to write from the ground up. I didn't
 write this code to be used black box, because I didn't expect it to be used
 by anyone but me. Classic mistake, right?
+
+Also, pardon my sometimes silly commit messages. Again, they were only written
+for me at the time.
